Minor code polishing

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    /* outline: 1px solid red; */
 }
 
 body {
@@ -104,7 +103,7 @@ body {
 }
 
 .hero button:hover {
-    background-color: hsl(217, 81%, 49%);
+    background-color: #1865e2;
     color: #e0e6db;
 }
 
